# Otus_8

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/: AtomicBlockQueue.h  CommandBlock.h  CommandReader.h  FileOutputThread.h  async.h  новый 1.txt
src/: async.cpp  main.cpp
